projects/maison/src/apps/jellyseerr/jellyseerr.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-websecure
  namespace: jellyseerr
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - jellyseerr.chezmoi.sh
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 80
