projects/maison/src/apps/jellyseerr/jellyseerr.vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-tailscale
  namespace: jellyseerr
spec:
  defaultBackend:
    service:
      name: jellyseerr
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyseerr
